--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server data/db.json"
+    "server": "json-server --watch data/db.json"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
